# ControlFrame

./: .gitignore  CMakeLists.txt  README.md
depend/libmodbus/include/: modbus-data.c  modbus-private.h  modbus-tcp.c  modbus.c
depend/liborocosKdl/linux_os_x86/: liborocos-kdl.so.1.4
depend/libzmq/include/: zhelpers.h
main/: main.cpp
src/: CMakeLists.txt
src/api/: api.cpp  api.hpp  apiCommands.cpp
src/base/: stateBase.hpp
src/hello/: helloCommands.cpp
src/message/: messageClient.hpp  messageServer.hpp
src/motion/: motion.cpp  motion.hpp  motionCommands.cpp  motionCommands.hpp  motionType.hpp
src/motion/arithmetic/: cubic.cpp  cubic.hpp  quintic.cpp  quintic.hpp
src/motion/tp/: tc.cpp  tc.hpp  tcq.cpp  tcq.hpp
src/robotStateMechine/: robotStateMechine.cpp  robotStateMechine.hpp
test/: CMakeLists.txt  test1.cpp  testMotion.cpp  testPublisher.cpp  testzmq.cpp
